issue 1366 integrated cache and reference DAO with JDBC persistence layer
Signed-off-by: Robin Arnold <robin.arnold23@ibm.com>